--- a/hs/src/index.sass
+++ b/hs/src/index.sass
@@ -9,11 +9,15 @@ body, html
     background-size: cover
 
 .item
+    margin-top: 10px
     border-style: solid
-    border-color: #ebc459
+    border-width: thin
+    border-color: grey
+    background-color: rgba(255, 255, 255, 0.8)
+    border-radius: 5px
 
 .navbar
-    background-color: transparent !important
+    background-color: whitesmoke !important
     color: #d4e8f4 !important
 
 .navbar-toggler-icon
